[metadata]
name = pytessy
author = hyperrixel
url = https://github.com/hyperrixel/pytessy
project_urls =
    Bug Tracker = https://github.com/hyperrixel/pytessy/issues
    Documentation = https://pytessy.readthedocs.io/
    Source Code = https://github.com/hyperrixel/pytessy

version = 0.1.1
license = Boost Software License - Version 1.0 - August 17th, 2003
description = Faster access to Tesseract-OCR from Python.
long_description = file: README.md
platform = any
license_files =
  LICENSE
classifiers=

[options]
name = pytessy
python_requires = >=3.8
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where=src

setup_requires =
    setuptools >=38.3.0
    pip >= 20.0
    setuptools_scm
